change conf-dir path

--- a/centos/supervisor/supervisord.conf
+++ b/centos/supervisor/supervisord.conf
@@ -10,10 +10,10 @@ minprocs=200                                    ; number of process descriptors
 user=root                                       ; default user
 childlogdir=/var/log/supervisor/                ; where child log files will live
 
-; each application has a file in /etc/supervisor/conf.d/
+; each application has a file in /etc/supervisord.d/
 
 [include]
-files = /etc/supervisor/conf.d/*.conf
+files = /etc/supervisord.d/*.conf
 
 ; use port 9001 on localhost to communicate with
 
