--- a/centos/supervisor/supervisord.d/syslog-ng.conf
+++ b/centos/supervisor/supervisord.d/syslog-ng.conf
@@ -1,5 +1,5 @@
 [program:syslog-ng]
-command=/usr/sbin/syslog-ng --foreground  --no-caps
+command=/usr/sbin/syslog-ng --foreground  
 redirect_stderr=true
 autostart=true
 stdout_syslog=true
